kubernetes/azure/tlproducao-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tlproducao-deployment
  labels:
    app: tlproducao-deployment
spec:
  selector:
    matchLabels:
      app: tlproducao
  replicas: 1
  template:
    metadata:
      labels:
        app: tlproducao
    spec:
      containers:
        - name: tlproducao
          image: tiulanchesacr.azurecr.io/tlproducao:latest  
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "1.0"                  
          ports:
            - containerPort: 8082
              name: tlproducao-port
---
apiVersion: v1
kind: Service
metadata:
  name: tlproducao-svc
spec:
  selector:
    app: tlproducao
  ports:
  - port: 82
    targetPort: 8082
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tlproducao-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /producao
        backend:
          service:
            name: tlproducao-svc
            port: 
              number: 82
